Add index in front of file name